--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/nadinejuraschek/Moodsphere#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "mongoose": "^5.8.9"
+    "express-session": "^1.17.0",
+    "mongoose": "^5.8.9",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   }
 }
