--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "### Team of Developers * [Nadine Pesso](https://github.com/nadinejuraschek) * [Morgan McMilin](https://github.com/Morganatic) * [Caitlin Phillips](https://github.com/Caitlin3410) * [Loralee Smith](https://github.com/LoraleeSmith)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
